--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ out
 cred
 *.log*
 token.json
+
+.vscode
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
